# oso_test

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
myapp/: authorizer.py  database.py  fixture.py  main.polar  main.py
myapp/migration/: env.py
myapp/migration/versions/: f8cd0770986d_create_tables.py
myapp/models/: __init__.py  company.py  organization.py  user.py  users_company.py  users_organization.py
tests/: conftest.py  test_user.py
